fix issue of spring security authorization problem